syntax = "proto3";

import "enums.proto";

service SchedulerToWorker {
  // Starts a job on a worker
  rpc StartJob (StartJobRequest) returns (StartJobReply) {}
}

message StartJobRequest {
  uint64 job_id = 1;
  string command = 2;
}

message StartJobReply {
  uint64 job_id = 1;
  JobStatus status = 2;
}
